--- a/prototypes/groepB4/src/main/resources/application.properties
+++ b/prototypes/groepB4/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=groepB4
+#rapidapi.key.vera=API_KEY
+rapidapi.key.vera=8fd6c45fc2mshabe221890633f2cp13b92ajsne074069107fa
+server.tomcat.relaxed-query-chars=|,{,},[,]
